fix: Fix window rules and restore all functionality.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -1,43 +1,234 @@
-# Global classes
-windowrule = float on, match:class wm-floating
-windowrule = center on , match:class wm-floating
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrule = float on, match:class wm-floating-big
-windowrule = size 1680 920, match:class wm-floating-big
-windowrule = center on, match:class wm-floating-big
+# Global rules
+windowrule {
+  name = floating
+  float = on
+  center = on
+  match:class = (wm-floating)
+}
+
+windowrule {
+  name = floating-big
+  float = on
+  size = 1680 920
+  center = on
+  match:class = (wm-floating-big)
+}
 
 # Applications to workspaces with window rules
-windowrule = workspace 2 silent, match:class org.qutebrowser.qutebrowser
-windowrule = workspace 2 silent, match:class firefox 
-windowrule = workspace 2 silent, match:class Thorium-browser
-windowrule = workspace 3 silent, match:class org.mozilla.Thunderbird
-windowrule = workspace 4 silent, match:class jetbrains-idea
-windowrule = workspace 5 silent, match:class steam
-windowrule = workspace 5 silent, match:class steamwebhelper
-windowrule = workspace 6 silent, match:class FreeTube
-windowrule = workspace 7 silent, match:class anythingllm-desktop
-windowrule = workspace 8 silent, match:class Godot
-windowrule = workspace 9 silent, match:class zoom
-windowrule = workspace 9 silent, match:class Signal
+windowrule {
+  name = windowrule-3
+  workspace = 2 silent
+  match:class = (.*qutebrowser.*)
+}
+
+windowrule {
+  name = windowrule-4
+  workspace = 2 silent
+  match:class = (.*firefox.*)
+}
+
+windowrule {
+  name = windowrule-5
+  workspace = 2 silent
+  match:class = (.*Thorium-browser.*)
+}
+
+windowrule {
+  name = windowrule-6
+  workspace = 3 silent
+  match:class = (.*Thunderbird.*)
+}
+
+windowrule {
+  name = windowrule-7
+  workspace = 3 silent
+  match:class = (.*thunderbird.*)
+}
+
+windowrule {
+  name = windowrule-8
+  workspace = 3 silent
+  match:class = (.*Mail.*)
+}
+
+windowrule {
+  name = windowrule-9
+  workspace = 4 silent
+  match:class = (.*jetbrains-idea.*)
+}
+
+windowrule {
+  name = windowrule-10
+  workspace = 5 silent
+  match:class = (.*steam.*)
+}
+
+windowrule {
+  name = windowrule-11
+  workspace = 5 silent
+  match:class = (.*steamwebhelper.*)
+}
+
+windowrule {
+  name = windowrule-12
+  workspace = 5 silent
+  float = on
+  match:class = (.*Terraria.*)
+}
+
+windowrule {
+  name = windowrule-13
+  workspace = 6 silent
+  match:class = (.*FreeTube.*)
+}
+
+windowrule {
+  name = windowrule-14
+  workspace = 7 silent
+  match:class = (.*resolve.*)
+}
+
+windowrule {
+  name = windowrule-15
+  workspace = 7 silent
+  match:class = (.*anythingllm-desktop.*)
+}
+
+windowrule {
+  name = windowrule-16
+  workspace = 8 silent
+  match:class = (.*Godot.*)
+}
+
+windowrule {
+  name = windowrule-17
+  workspace = 9 silent
+  match:class = (.*zoom.*)
+}
+
+windowrule {
+  name = windowrule-18
+  workspace = 9 silent
+  match:class = (.*telegram-desktop.*)
+}
+
+windowrule {
+  name = windowrule-19
+  workspace = 9 silent
+  match:class = (.*discord.*)
+}
+
+windowrule {
+  name = windowrule-20
+  workspace = 9 silent
+  match:class = (.*Signal.*)
+}
+
 
 # Positions, floats
-windowrule = float on, match:class nemo
-windowrule = float on, match:class Gaia Sky
-windowrule = float on, match:class blueman-manager
-windowrule = center on, match:class blueman-manager
-windowrule = float on, match:class nm-connection-editor
-windowrule = center on, match:class nm-connection-editor
-windowrule = float on, match:class mpv
-windowrule = center on, match:class mpv
-windowrule = float on, match:class speedcrunch
-windowrule = center on, match:class speedcrunch
-windowrule = float on, match:class org.mozilla.Thunderbird
-windowrule = float on, match:class org.mozilla.Thunderbird, match:title Feed Subscriptions
-windowrule = float on, match:class org.mozilla.Thunderbird, match:title About Mozilla Thunderbird
-windowrule = float on, match:class org.mozilla.Thunderbird, match:title Write: .*
-windowrule = float on, match:class Terraria
-windowrule = float on, match:title Export Image as
+windowrule {
+  name = windowrule-21
+  float = on
+  match:class = (nemo)
+}
+
+windowrule {
+  name = windowrule-22
+  float = on
+  match:class = (Gaia Sky)
+  match:title = (Gaia Sky)
+}
+
+windowrule {
+  name = windowrule-23
+  float = on
+  center = on
+  match:class = (blueman-manager)
+}
+
+windowrule {
+  name = windowrule-24
+  float = on
+  center = on
+  match:class = (nm-connection-editor)
+}
+
+windowrule {
+  name = windowrule-25
+  float = on
+  center = on
+  match:class = (mpv)
+}
+
+windowrule {
+  name = windowrule-26
+  float = on
+  center = on
+  match:class = (.*speedcrunch)
+}
+
+windowrule {
+  name = windowrule-27
+  float = on
+  match:class = (thunderbird)
+  match:title = (.*Reminder[s]?)
+}
+
+windowrule {
+  name = windowrule-28
+  float = on
+  match:class = (thunderbird)
+  match:title = (Feed Subscriptions)
+}
+
+windowrule {
+  name = windowrule-29
+  float = on
+  match:class = (thunderbird)
+  match:title = (About Mozilla Thunderbird)
+}
+
+windowrule {
+  name = windowrule-30
+  float = on
+  match:class = (thunderbird)
+  match:title = (Write: .*)
+}
+
+windowrule {
+  name = windowrule-31
+  float = on
+  match:class = (.*zenity.*)
+}
+
+windowrule {
+  name = windowrule-32
+  float = on
+  match:title = (Export Image as.*)
+}
+
+
+# Picture-in-picture windows
+windowrule {
+  name = picture-in-picture
+  float = on
+  pin = on
+  move = ((monitor_w*0.67)) ((monitor_h*0.72))
+  size = (monitor_w*0.33) (monitor_h*0.28)
+  match:title = ^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
+}
 
 
 # Special
-windowrule = no_initial_focus on, match:class jetbrains-.*
+windowrule {
+  name = intellij-idea
+  no_initial_focus = on
+  match:class = (jetbrains-)(.*)
+  match:float = 1
+}
