fix: Reorder and rename rules.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -22,110 +22,92 @@ windowrule {
 
 # Applications to workspaces with window rules
 windowrule {
-  name = windowrule-3
+  name = qutebrowser
   workspace = 2 silent
   match:class = (.*qutebrowser.*)
 }
 
 windowrule {
-  name = windowrule-4
+  name = firefox
   workspace = 2 silent
-  match:class = (.*firefox.*)
+  match:class = (firefox)
 }
 
 windowrule {
-  name = windowrule-5
-  workspace = 2 silent
-  match:class = (.*Thorium-browser.*)
-}
-
-windowrule {
-  name = windowrule-6
-  workspace = 3 silent
-  match:class = (.*Thunderbird.*)
-}
-
-windowrule {
-  name = windowrule-7
-  workspace = 3 silent
-  match:class = (.*thunderbird.*)
-}
-
-windowrule {
-  name = windowrule-8
+  name = mail
   workspace = 3 silent
   match:class = (.*Mail.*)
 }
 
 windowrule {
-  name = windowrule-9
+  name = intellij-idea
   workspace = 4 silent
   match:class = (.*jetbrains-idea.*)
 }
 
 windowrule {
-  name = windowrule-10
+  name = steam
   workspace = 5 silent
   match:class = (.*steam.*)
 }
 
 windowrule {
-  name = windowrule-11
+  name = steam-webhelper
   workspace = 5 silent
   match:class = (.*steamwebhelper.*)
 }
 
 windowrule {
-  name = windowrule-12
+  name = terraria
   workspace = 5 silent
   float = on
   match:class = (.*Terraria.*)
 }
 
 windowrule {
-  name = windowrule-13
+  name = freetube
   workspace = 6 silent
   match:class = (.*FreeTube.*)
 }
 
 windowrule {
-  name = windowrule-14
+  name = davinci-resolve
   workspace = 7 silent
   match:class = (.*resolve.*)
 }
 
 windowrule {
-  name = windowrule-15
+  name = anythingllm
   workspace = 7 silent
   match:class = (.*anythingllm-desktop.*)
 }
 
 windowrule {
-  name = windowrule-16
+  name = godot
   workspace = 8 silent
   match:class = (.*Godot.*)
 }
 
 windowrule {
-  name = windowrule-17
+  name = zoom
   workspace = 9 silent
   match:class = (.*zoom.*)
 }
 
 windowrule {
-  name = windowrule-18
+  name = telegram
   workspace = 9 silent
   match:class = (.*telegram-desktop.*)
 }
 
 windowrule {
-  name = windowrule-19
+  name = discord
   workspace = 9 silent
   match:class = (.*discord.*)
 }
 
 windowrule {
-  name = windowrule-20
+  name = signal
   workspace = 9 silent
   match:class = (.*Signal.*)
 }
@@ -133,82 +115,88 @@ windowrule {
 
 # Positions, floats
 windowrule {
-  name = windowrule-21
+  name = about-windows
+  float = on
+  match:title = (About .*)
+}
+
+windowrule {
+  name = nemo
   float = on
   match:class = (nemo)
 }
 
 windowrule {
-  name = windowrule-22
+  name = gaiasky
   float = on
   match:class = (Gaia Sky)
   match:title = (Gaia Sky)
 }
 
 windowrule {
-  name = windowrule-23
+  name = bluemanmanager
   float = on
   center = on
   match:class = (blueman-manager)
 }
 
 windowrule {
-  name = windowrule-24
+  name = networkmanager
   float = on
   center = on
   match:class = (nm-connection-editor)
 }
 
 windowrule {
-  name = windowrule-25
+  name = mpv
   float = on
   center = on
   match:class = (mpv)
 }
 
 windowrule {
-  name = windowrule-26
+  name = speedcrunch
   float = on
   center = on
-  match:class = (.*speedcrunch)
+  match:class = (org.speedcrunch.speedcrunch)
+}
+
+
+windowrule {
+  name = thunderbird
+  workspace = 3 silent
+  match:class = (org.mozilla.Thunderbird)
 }
 
 windowrule {
-  name = windowrule-27
+  name = thunderbird-reminder
   float = on
-  match:class = (thunderbird)
+  match:class = (org.mozilla.Thunderbird)
   match:title = (.*Reminder[s]?)
 }
 
 windowrule {
-  name = windowrule-28
+  name = thunderbird-feed
   float = on
-  match:class = (thunderbird)
+  match:class = (org.mozilla.Thunderbird)
   match:title = (Feed Subscriptions)
 }
 
 windowrule {
-  name = windowrule-29
+  name = thunderbird-write
   float = on
-  match:class = (thunderbird)
-  match:title = (About Mozilla Thunderbird)
-}
-
-windowrule {
-  name = windowrule-30
-  float = on
-  match:class = (thunderbird)
+  match:class = (org.mozilla.Thunderbird)
   match:title = (Write: .*)
 }
 
 windowrule {
-  name = windowrule-31
+  name = zenity
   float = on
   match:class = (.*zenity.*)
 }
 
 windowrule {
-  name = windowrule-32
+  name = export-image
   float = on
   match:title = (Export Image as.*)
 }
