fix: Restore intellij popup rules.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -213,10 +213,21 @@ windowrule {
 }
 
 
-# Special
+# Intellij stuff
+# Start phpstorm correctly
 windowrule {
-  name = intellij-idea
-  no_initial_focus = on
-  match:class = (jetbrains-)(.*)
+  name = intellij-php
+  maximize = on
+  match:class = ^(jetbrains-.*)$
+  match:initial_title = ^\s$
+}
+
+# No hyprland border around popups
+windowrule {
+  name = intellij-popups
+  border_size = 0
+  no_focus = on
+  match:class = ^(jetbrains-.*)$
+  match:title = ^(win.*)$
   match:float = 1
 }
