feat: Add playkid to float.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -127,6 +127,13 @@ windowrule {
 }
 
 windowrule {
+  name = PlayKid
+  float = on
+  match:class = (playkid)
+}
+
+
+windowrule {
   name = gaiasky
   float = on
   match:class = (Gaia Sky)
