feat: OBS floating.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -121,6 +121,12 @@ windowrule {
 }
 
 windowrule {
+  name = obs
+  float = on
+  match:class = (hyprland-share-picker|com.obsproject.Studio)
+}
+
+windowrule {
   name = nemo
   float = on
   match:class = (nemo)
