feat: GTK desktop portal to floating.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -121,6 +121,12 @@ windowrule {
 }
 
 windowrule {
+  name = gtk-file-picker
+  float = on
+  match:class = (xdg-desktop-portal-gtk)
+}
+
+windowrule {
   name = obs
   float = on
   match:class = (hyprland-share-picker|com.obsproject.Studio)
