feat: LM Studio to ws7.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -81,6 +81,11 @@ windowrule {
   workspace = 7 silent
   match:class = (.*anythingllm-desktop.*)
 }
+windowrule {
+  name = lm-studio
+  workspace = 7 silent
+  match:class = (LM Studio)
+}
 
 windowrule {
   name = godot
