fix: Update NVIDIA hyprland so that everything works (??).

--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -1,8 +1,14 @@
 # Environment
+
+# Recommended in the Hyprland docs for Nvidia cards.
 env = LIBVA_DRIVER_NAME,nvidia
-env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+
+# These are no longer needed it seems.
+# env = GBM_BACKEND,nvidia-drm
+# env = WLR_NO_HARDWARE_CURSORS,1
+
+# VA-API hardware video acceleration.
 env = NVD_BACKEND,direct
 
 # Source base file
@@ -11,12 +17,12 @@ source = ~/.dotfiles/hyprland/hyprland-common.conf
 # Uncomment to use X11 mode for Qt apps.
 # env = QT_QPA_PLATFORM,xcb
 
-# Use X11 with qutebrowser
+# Use X11 with qutebrowser, no longer needed.
 #unbind = $mod SHIFT, W
 #bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
 
 # Disable glitched monitor in NVIDIA
-monitor=Unknown-1,disable
+# monitor=Unknown-1,disable
 
 cursor {
   no_hardware_cursors = false
