--- a/helix/config.toml
+++ b/helix/config.toml
@@ -13,7 +13,7 @@ color-modes = true
 true-color = true
 # Always show the tabs at the top
 bufferline = "always"
-rulers = [100]
+rulers = [100, 150]
 
 [editor.cursor-shape]
 insert = "bar"
