fix: Use mod+shift+a to bring up the actions for fnott.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -14,6 +14,9 @@ $myterm = kitty
   bind = $mod SHIFT, W, exec, uwsm app -- env QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
   bind = $mod SHIFT, T, exec, uwsm app -- thunderbird
 
+# Notifications
+  bind = $mod SHIFT, A, exec, fnottctl actions
+
 # Lock
   bind = $mod SHIFT, Z, exec, uwsm app -- hyprlock
 
