--- a/fnott/fnott.ini
+++ b/fnott/fnott.ini
@@ -3,52 +3,52 @@
 # For documentation on these options, see `man fnott.ini`
 
 # Global values
- min-width=0
- max-width=0
- max-height=0
- stacking-order=bottom-up
- anchor=top-right
- edge-margin-vertical=10
- edge-margin-horizontal=10
- notification-margin=10
- icon-theme=hicolor
- max-icon-size=32
- selection-helper=dmenu
- selection-helper-uses-null-separator=no
- scaling-filter=cubic
+min-width=0
+max-width=0
+max-height=0
+stacking-order=bottom-up
+anchor=top-right
+edge-margin-vertical=10
+edge-margin-horizontal=10
+notification-margin=10
+icon-theme=hicolor
+max-icon-size=32
+selection-helper=rofi -dmenu -p "Notification Action"
+selection-helper-uses-null-separator=no
+scaling-filter=cubic
 
 # Default values, may be overridden in 'urgency' specific sections
 # layer=top
 # background=3f5f3fff
 
- border-color=909090ff
- border-radius=12
- border-size=2
- padding-vertical=15
- padding-horizontal=30
- dpi-aware=no
- title-font=Inter:size=11
- title-color=ffffff99
- title-format=<i>%a%A</i>
- summary-font=Inter Black:size=13
- summary-color=ffffffff
- summary-format=%s
- body-font=Inter:size=11
- body-color=ffffff99
- body-format=\n%b
- sound-file=
- icon=
+border-color=909090ff
+border-radius=12
+border-size=2
+padding-vertical=15
+padding-horizontal=30
+dpi-aware=no
+title-font=Inter:size=11
+title-color=ffffff99
+title-format=<i>%a%A</i>
+summary-font=Inter Black:size=13
+summary-color=ffffffff
+summary-format=%s
+body-font=Inter:size=11
+body-color=ffffff99
+body-format=\n%b
+sound-file=
+icon=
 # Timeout values are in seconds. 0 to disable
- max-timeout=15
- default-timeout=10
- idle-timeout=60
- [low]
- background=131313dd
- summary-color=3456a9ff
- title-color=5577ac99
- [normal]
- background=131313dd
- [critical]
- background=131313dd
- summary-color=ff1010ff
- title-color=aa333399
+max-timeout=15
+default-timeout=10
+idle-timeout=60
+[low]
+background=131313dd
+summary-color=3456a9ff
+title-color=5577ac99
+[normal]
+background=131313dd
+[critical]
+background=131313dd
+summary-color=ff1010ff
+title-color=aa333399
