feat: Use brightnessctl directly in bindings.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -130,8 +130,8 @@ $myterm = kitty
   bind = $mod CONTROL, comma, exec, playerctl previous
 
 # Brightness
-  bind = , XF86MonBrightnessUp, exec, brightness+
-  bind = , XF86MonBrightnessDown, exec, brightness-
+  bind = , XF86MonBrightnessUp, exec, brightnessctl s 10%+
+  bind = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # Monitor off
   bind = $mod, F8, exec, swayidle -w timeout 1 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on; pkill -nx swayidle'
