feat: Black lock screen with arch logo.

--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -10,8 +10,7 @@ general {
 # BACKGROUND IMAGE
 background {
   monitor =
-  path = /home/tsagrista/.dotfiles/assets/lock/lock-img.png
-  color = rgba(28, 20, 20, 1.0)
+  color = rgba(0, 0, 0, 1.0)
 
   blur_passes = 2
   noise = 0.117
@@ -38,7 +37,7 @@ label {
   monitor =
   text = cmd[update:1000] echo "$(date +"%A, %B %d")"
   text_align = center
-  color = rgba(250, 150, 50, 1.0)
+  color = rgba(50, 150, 250, 1.0)
   font_size = 40
   font_family = Inter
   rotate = 0 # degrees, counter-clockwise
@@ -126,5 +125,13 @@ label {
     shadow_passes = 1
     shadow_size = 2
     shadow_color = rgba(250, 227, 176, 0.3)
+}
+# Arch
+image {
+  path = ~/.dotfiles/assets/icons/archlogo.small.jpg
+  halign = center
+  valign = bottom
+  position = 0,20
+  border_size = 0
 }
 
